force-app/main/default/staticresources/python/Disappear/src/objects/ProdIndiObjective__c.object
<CustomObject>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox for Salesforce UI to communicate with backend
please do not store any data in this field</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objective_no__c</fullName>
        <description>Will be populated by Data migration and will be used for Reporting</description>
        <label>Objective #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Indication</label>
        <referenceTo>ProductIndication__c</referenceTo>
        <relationshipLabel>Product Indication Objectives</relationshipLabel>
        <relationshipName>Product_Indication_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Product Indication Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Indication__c</columns>
        <columns>Objective_no__c</columns>
        <columns>SiebelRowId__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <columns>Start_date__c</columns>
        <columns>End_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Indication Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Indication Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>